shrink intercom button, prepare for documentation slider

--- a/public/assets/skin/default_skin/css/docs.css
+++ b/public/assets/skin/default_skin/css/docs.css
@@ -415,9 +415,12 @@ section.bs-docs-section {
     /*background: #fff;*/
 }
 
-#docs-content .tab-pane {
-}
+#docs-content .tab-pane {}
 
 .documentation-content-text-container {
     margin-left: 315px;
+}
+
+.ohidden {
+    overflow: hidden !important;
 }
