--- a/public/assets/css/default_skin/css/docs.css
+++ b/public/assets/css/default_skin/css/docs.css
@@ -14,7 +14,6 @@
 
 .left-col {
     vertical-align: top !important;
-    padding: 15px;
     background: #fbfbfb;
     border-right: 1px solid #dadada;
 }
@@ -68,7 +67,7 @@ body.left-col-hidden #left-col-toggle {
 ================================================= */
 
 .center-col {
-    padding: 30px 25px 30px 0px;
+    padding: 30px 0px 30px 0px;
 }
 
 .changelog-row .center-col {
@@ -273,7 +272,8 @@ body.left-col-hidden #left-col-toggle {
 
 .page-header {
     font-size: 18px;
-    margin-top: 25px;
+    margin-top: 0px;
+    padding-top: 25px;
     margin-bottom: 25px;
 }
 
@@ -383,17 +383,13 @@ body.left-col-hidden #left-col-toggle {
 }
 
 .left-table-of-contents {
-    position: absolute;
-    border-right: none;
+    position: fixed;
     border-right: 1px solid #DDD;
-    top: 0;
     height: 100%;
     background: #f5f5f5;
 }
 
 .left-table-of-contents aside {
-    padding-left: 15px;
-    padding-right: 15px;
     width: 300px;
 }
 
@@ -417,8 +413,13 @@ section.bs-docs-section {
 
 #docs-content .tab-pane {}
 
+.documentation-content-text-container > section {
+    padding: 15px;
+}
+
 .documentation-content-text-container {
-    margin-left: 315px;
+    margin-left: 301px;
+    padding-right: 0px;
 }
 
 .ohidden {
