scroller shows over modals, sidebar left scrolls correctly

--- a/public/assets/css/default_skin/css/docs.css
+++ b/public/assets/css/default_skin/css/docs.css
@@ -398,6 +398,7 @@ ul.tray-nav {
     border-right: none;
     margin: 0;
     padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 #docs-content tray-left {
