--- a/public/assets/css/overrides/overrides.css
+++ b/public/assets/css/overrides/overrides.css
@@ -790,9 +790,8 @@ body.onload-check #sidebar_left {
 }
 
 #documentation-region {
-    position: relative;
-    bottom: 0;
-    overflow: auto;
+    position: fixed;
+    z-index: 2147483000;
 }
 
 #documentation-button-container > .documentation-button:hover {
@@ -817,7 +816,7 @@ body.onload-check #sidebar_left {
 
 .toggle-help-info {
     position: fixed;
-    right: 20px;
+    right: 24px;
     margin-top: 15px;
     z-index: 1;
 }
@@ -853,8 +852,8 @@ body.onload-check #sidebar_left {
     padding-right: 16px;
 }
 
-.documentation.nav-spy.nano .nano-pane {
-    display: none;
+.left-table-of-contents .nano-pane {
+    display: none !important;
 }
 
 #docs .docs-resize .docs-resizebar {
