initial domain as job, second nav dropdown html for docs

--- a/public/assets/css/overrides/overrides.css
+++ b/public/assets/css/overrides/overrides.css
@@ -911,3 +911,12 @@ body.onload-check #sidebar_left {
 .file-footer-buttons > button.kv-file-zoom {
     display: none;
 }
+
+a.delete-domain-button:hover,
+a.remove-group-button:hover {
+    text-decoration: none;
+}
+
+.sidebar-left-content .sidebar-menu > li > ul {
+    width: inherit;
+}
